--- a/demo1/demo1/Views/Permission/AssignPermissionsToRoles.cshtml
+++ b/demo1/demo1/Views/Permission/AssignPermissionsToRoles.cshtml
@@ -1,43 +1,54 @@
+@model demo1.ViewModels.UpdateUserPermissionsViewModel
+
 @{
     ViewData["Title"] = "Assign Permissions to Roles";
 }
 
-<h1>Assign Permissions to Roles</h1>
+<h1>Assign Permissions to Roles for @Model.UserName</h1>
 
-<form asp-action="AssignPermissionsToRoles" method="post">
-    <div class="form-group">
-        <label for="userName" class="control-label">User Name</label>
-        <input type="text" id="userName" name="userName" class="form-control" />
-    </div>
-    <div class="form-group">
-        <label>Roles and Permissions</label>
-        <table class="table">
-            <thead>
+<form asp-action="UpdateUserPermissions" method="post">
+    <input type="hidden" asp-for="UserName" />
+
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Role</th>
+                <th>View</th>
+                <th>Insert</th>
+                <th>Update</th>
+                <th>Delete</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var role in ViewBag.Roles)
+            {
+                var rolePermission = Model.Permissions.ContainsKey(role.Id) ? Model.Permissions[role.Id] : new RolePermission();
+
                 <tr>
-                    <th>Role</th>
-                    @foreach (var permission in ViewBag.Permissions)
-                    {
-                        <th>@permission.Name</th>
-                    }
+                    <td>@role.Name</td>
+                    <td>
+                        <input type="hidden" name="Permissions[@role.Id].RoleId" value="@role.Id" />
+                        <input type="checkbox" name="Permissions[@role.Id].CanView" value="true" @(rolePermission.CanView ? "checked" : "") />
+                        <input type="hidden" name="Permissions[@role.Id].CanView" value="false" />
+                    </td>
+                    <td>
+                        <input type="checkbox" name="Permissions[@role.Id].CanInsert" value="true" @(rolePermission.CanInsert ? "checked" : "") />
+                        <input type="hidden" name="Permissions[@role.Id].CanInsert" value="false" />
+                    </td>
+                    <td>
+                        <input type="checkbox" name="Permissions[@role.Id].CanUpdate" value="true" @(rolePermission.CanUpdate ? "checked" : "") />
+                        <input type="hidden" name="Permissions[@role.Id].CanUpdate" value="false" />
+                    </td>
+                    <td>
+                        <input type="checkbox" name="Permissions[@role.Id].CanDelete" value="true" @(rolePermission.CanDelete ? "checked" : "") />
+                        <input type="hidden" name="Permissions[@role.Id].CanDelete" value="false" />
+                    </td>
                 </tr>
-            </thead>
-            <tbody>
-                @foreach (var role in ViewBag.Roles)
-                {
-                    <tr>
-                        <td>@role.Name</td>
-                        @foreach (var permission in ViewBag.Permissions)
-                        {
-                            <td>
-                                <input class="form-check-input" type="checkbox" name="rolePermissions" value="@role.Name-@permission.Name" />
-                            </td>
-                        }
-                    </tr>
-                }
-            </tbody>
-        </table>
-    </div>
+            }
+        </tbody>
+    </table>
+
     <div class="form-group">
-        <input type="submit" value="Assign" class="btn btn-primary" />
+        <button type="submit" class="btn btn-primary">Update Permissions</button>
     </div>
 </form>
